currency-conversion-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  replicas: 2 #CHANGE
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-conversion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-conversion
    spec:
      containers:
        - image: rv0718/currency-conversion:0.0.1-SNAPSHOT #CHANGE
          imagePullPolicy: IfNotPresent
          name: currency-conversion
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  ports:
    - # nodePort: 30701 #CHANGE
      port: 8100 #CHANGE
      protocol: TCP
      targetPort: 8100 #CHANGE
  selector:
    app: currency-conversion
  sessionAffinity: None #CHANGE
  type: LoadBalancer
